Add RS256 key signing
